--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,83 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hairworx</title>
+
+    <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{% static 'css/lightbox.min.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  
+  <title>Hairworx</title>
 </head>
 <body>
+    <nav class="white" role="navigation">
+        <div class="nav-wrapper container">
+          <div class="logocontainer">
+            <a id="logo-container" href="#"  class="brand-logo">
+              <!-- <img src="{% static 'img/logo.png' %}" clss="logo" alt=""> -->
+            </a>
+          </div>
+          
+          <ul class="right hide-on-med-and-down">
+            <li
+              {% if '/' == request.path %}
+                class="active"
+              {% else %}
+                class=""
+              {% endif %}
+            ><a href="{% url 'index' %}">Home</a></li>
+            <li
+              {% if 'services' in request.path %}
+                class="active"
+              {% else %}
+                class=""
+              {% endif %}
+            ><a href="{% url 'services' %}">Services</a></li>
+            <li><a href="#">Contact</a></li>
+            <li
+              {% if 'gallery' in request.path %}
+                class="active"
+              {% else %}
+                class=""
+              {% endif %}
+            ><a href="{% url 'gallery' %}">Gallery</a></li>
+            <li><a href="#">Products</a></li>
+
+          </ul>
+    
+          <ul id="nav-mobile" class="sidenav">
+            <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'services' %}">Services</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="{% url 'gallery' %}">Gallery</a></li>
+            <li><a href="#">Products</a></li>
+          </ul>
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
+      </nav>
     {% block content %}
 
     {% endblock %}
+
+
+  <footer class="page-footer brown darken-4">
+    <div class="footer-copyright">
+      <div class="container">
+        
+      </div>
+    </div>
+  </footer>
+
+    <!--  Scripts-->
+    <script src="{% static 'js/jquery-3.3.1.min.js' %} "></script>
+    <script src="{% static 'js/materialize.js' %} "></script>
+    <script src="{% static 'js/main.js' %} "></script>
+    <script src="{% static 'js/init.js' %}"></script>
     
 </body>
 </html>
