--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,7 +1,165 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
-<h1>Homepage</h1>
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1  class="headingText header center brown-text text-lighten-4">HairWorx</h1>
+        <div class="row center">
+          <h5 class="header col s12 light" >
+            Your Personal Hair Expert
+          </h5>
+        </div>
+        <div class="row center">
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light brown lighten-1">Book an Appointment</a>
+        </div>
+        <br><br>
+
+      </div>
+    </div>
+    <div class="parallax"><img src="{% static 'img/bg.jpg' %}" alt="Unsplashed background img 1"></div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <!-- <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2> -->
+            <h5 class="center">
+              Our Salons
+            </h5>
+
+            <p class="light"  style="font-size: 18px; text-align: justify;
+            ">
+              From the excitement of the salon to our serene 
+              beauty sanctuaries, explore our site, where the worlds leading hair, beauty and nail experts 
+              allow you to relax, pamper and enjoy
+            </p>
+            <a href="#">Find out more</a>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <!-- <h2 class="center brown-text"><i class="material-icons">group</i></h2> -->
+            <h5 class="center">Our Hair Servies</h5>
+
+            <p class="light" style="font-size: 18px; text-align: justify;">
+              Our stylist colour technicians will use their experties and knowledge 
+              of the latest techniques to create a look just for you.  
+            </p>
+            <a href="#">Find out more</a>
+
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <!-- <h2 class="center brown-text"><i class="material-icons">settings</i></h2> -->
+            <h5 class="center">Easy to work with</h5>
+
+            <p class="light" style="font-size: 18px;text-align: justify;">
+              Enjoy expert care, soothing surroundings and bespoke treatments 
+              from our team of beauty specialist
+            </p>
+            <a href="#">Find out more</a>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h1 class="headingText header col s12 brown-text darken-4">
+            Hair Worx
+            Your Personal Hair Expert          
+          </h1>
+
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="{% static 'img/bg5.jpg' %}" alt="Unsplashed background img 2"></div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>About Us</h4>
+          <p class="left-align light" style="font-size: 22px;">
+            Hair Worx is a popular Hairdresser known 
+            for providing high quality hairdressing services. 
+            All of our team members, stay abreast of new trends and 
+            products in the industry, ensuring that clients only get the best. 
+            Enjoy our top of the line products and tailor made services. 
+            Stop by and get your hair looking better than ever before.
+            </p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <section id="contact" class="brown lighten-1 section section-contact scrollspy">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card-panel brown-text center">
+            <i class="material-icons medium">email</i>
+            <h5>Contact Us For Booking</h5>
+            <p>Questions, ideas? Let us know.
+            </p>
+          </div>
+          <ul class="collection with-header">
+            <li class="collection-header">
+              <h4>Location</h4>
+            </li>
+            <li class="collection-item">12/77 Saint George Street, Papatoetoe, Auckland 2025, New Zealand
+            </li>
+            <li class="collection-item">09-250 1880            </li>
+          </ul>
+        </div>
+        <div class="col s12 m6">
+          <div class="card-panel grey lighten-3">
+            <h5>Please fill out this form</h5>
+            <div class="input-field">
+              <input type="text" placeholder="Name" id="name">
+              <label for="name" class="active">Name</label>
+            </div>
+            <div class="input-field">
+              <input type="email" placeholder="Email" id="email">
+              <label for="email" class="active">Email</label>
+            </div>
+            <div class="input-field">
+              <input type="text" placeholder="Phone" id="phone">
+              <label for="phone" class="active">Phone</label>
+            </div>
+            <div class="input-field">
+              <textarea class="materialize-textarea" placeholder="Enter Message" id="message"></textarea>
+              <label for="message" class="active">Message</label>
+            </div>
+            <input type="submit" value="Submit" class="btn">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 {% endblock %}
