--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,14 +7,17 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1  class="headingText header center brown-text text-lighten-4">HairWorx</h1>
+        <h1  class="headingText header center brown-text text-lighten-2">HairWorx</h1>
         <div class="row center">
           <h5 class="header col s12 light">
             Your Personal Hair Expert
           </h5>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light brown lighten-1">Book an Appointment</a>
+          <a target="_blank" href="{% url 'create-booking' %}" class="btn modal-trigger btn-large waves-effect waves-light brown lighten-1">
+            Book an Appointment
+          </a>
+          <!-- <button data-target="modal1"  id="download-button" class="btn modal-trigger btn-large waves-effect waves-light brown lighten-1">Book an Appointment</button> -->
         </div>
         <br><br>
 
@@ -30,6 +33,9 @@
 
       <!--   Icon Section   -->
       <div class="row">
+        <h5 class=" center blue-text" style="padding: 10px;">
+          {% include 'messages/alert.html' %}
+        </h5>
         <div class="col s12 m4">
           <div class="icon-block">
             <!-- <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2> -->
@@ -37,7 +43,7 @@
               Our Salons
             </h5>
 
-            <p class="light"  style="font-size: 18px; text-align: justify;
+            <p class="light"  style="font-size: 16px; text-align: justify;
             ">
               From the excitement of the salon to our serene 
               beauty sanctuaries, explore our site, where the worlds leading hair, beauty and nail experts 
@@ -52,7 +58,7 @@
             <!-- <h2 class="center brown-text"><i class="material-icons">group</i></h2> -->
             <h5 class="center">Our Hair Servies</h5>
 
-            <p class="light" style="font-size: 18px; text-align: justify;">
+            <p class="light" style="font-size: 16px; text-align: justify;">
               Our stylist colour technicians will use their experties and knowledge 
               of the latest techniques to create a look just for you.  
             </p>
@@ -66,7 +72,7 @@
             <!-- <h2 class="center brown-text"><i class="material-icons">settings</i></h2> -->
             <h5 class="center">Easy to work with</h5>
 
-            <p class="light" style="font-size: 18px;text-align: justify;">
+            <p class="light" style="font-size: 16px;text-align: justify;">
               Enjoy expert care, soothing surroundings and bespoke treatments 
               from our team of beauty specialist
             </p>
@@ -102,7 +108,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>About Us</h4>
-          <p class="left-align light" style="font-size: 22px;">
+          <p class="left-align light" style="font-size: 20px;">
             Hair Worx is a popular Hairdresser known 
             for providing high quality hairdressing services. 
             All of our team members, stay abreast of new trends and 
@@ -117,49 +123,165 @@
   </div>
 
 
+  <div class="section brown lighten-3">
+    <div class="container">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h4>Testimonials</h4>
+          <div class="carousel carousel-slider center initialized" data-indicators="true" style="height: 100px !important;">
+            <div class="carousel-item active" href="#one!">
+
+              <p class="flow-text" style="font-size: 20px; font-style: italic; padding:  10% 0;">
+                "I'm particular with my hair and it has been challeneging for me to find here in Auckland a hair stylist who exactly knows what to do.
+                  And finally Hair Worx is here.
+                  Arnie has amazing hands. Truly gifted!
+                  I'm soooo happy with my new hair cut. Arnie has exceeded my expectations.
+                  Keep up the good worX!"- Nina
+                </p>
+             
+            </div>
+            <div class="carousel-item" href="#two!">
+              <p class="flow-text" style="font-size: 20px; font-style: italic; padding:  10% 0;">
+                "Highly recommend the work of the the owner Arnie and his team. The atmosphere is absolutely great, the team is exceptionally friendly and make u feel comfortable.
+
+                Arnie’s expertise are above and beyond.
+                
+                If u want a great hairdresser, colour expert and the experience I had go here" - Markelle</em>
+                </p>
+              
+            </div>
+            <div class="carousel-item" href="#three!">
+              <p class="flow-text" style="font-size: 20px; font-style: italic; padding:  10% 0;">
+                
+                "Arnie does an Amazing job with my hair!
+                Totally always happy with the outcome.
+                I highly recommend Hair Worx, I have been a regular since they have opened and will continue to do so.. Give them a go and you will be happy with there results.
+                Thankyou Arnie and Jasmine x" - Moana
+                </p>
+            
+            </div>
+            <div class="carousel-item" href="#four!">
+              <p class="flow-text" style="font-size: 20px; font-style: italic; padding:  10% 0;">
+                
+                "Fantastic customer service. Love how my hair turned out. Definitely going back . Thankyou Arnie - Kim
+                
+                Excellent stylist would definitely recommend" - Lizeth
+                </p>
+              
+            </div>
+            
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+ 
+
+
   <section id="contact" class="brown lighten-1 section section-contact scrollspy">
     <div class="container">
       <div class="row">
         <div class="col s12 m6">
-          <div class="card-panel brown-text center">
-            <i class="material-icons medium">email</i>
-            <h5>Contact Us For Booking</h5>
-            <p>Questions, ideas? Let us know.
-            </p>
+          <div class="mail card-panel brown-text center">
+            <h6>Questions, ideas? Give us a Call.</h6>
+            <i class="material-icons medium" style="font-size: 28px;">phone</i> Tel: 09-250 1880
+
+
+            
           </div>
-          <ul class="collection with-header">
+          <ul class="collection with-header hide-on-small-only	">
             <li class="collection-header">
-              <h4>Location</h4>
+              <h4 class="brown-text lighten-1">Location</h4>
             </li>
             <li class="collection-item">12/77 Saint George Street, Papatoetoe, Auckland 2025, New Zealand
             </li>
-            <li class="collection-item">09-250 1880            </li>
           </ul>
         </div>
         <div class="col s12 m6">
-          <div class="card-panel grey lighten-3">
-            <h5>Please fill out this form</h5>
-            <div class="input-field">
-              <input type="text" placeholder="Name" id="name">
-              <label for="name" class="active">Name</label>
+          <div class="center card-panel brown-text lighten-3">
+            <h4>Opening Hours</h4>
+            <p> Mon - Friday : 9:00am - 6:00pm</p>
+            <p> Sat : 9:00 am - 6:00 pm</p>
+            <p> Sun : 10:00 am - 5:00 pm</p>
+            <div class="row">
+              <a href="https://www.facebook.com/hairworxpapatoetoe/?modal=admin_todo_tour#" target="_blank" style="padding: 0 2%;">
+                <img src="{% static 'img/social/facebook.png' %}" width="32px" height="32px" alt="">
+              </a>
+              <a href="https://www.instagram.com/h.worx/" target="_blank"  style="padding: 0 2%;">
+                <img src="{% static 'img/social/instagram.png' %}" width="32px" height="32px" alt="">
+              </a>
+              <a href="#" style="padding: 0 2%;">
+                <img src="{% static 'img/social/twitter.png' %}"  target="_blank" width="32px" height="32px" alt="">
+              </a>
             </div>
-            <div class="input-field">
-              <input type="email" placeholder="Email" id="email">
-              <label for="email" class="active">Email</label>
-            </div>
-            <div class="input-field">
-              <input type="text" placeholder="Phone" id="phone">
-              <label for="phone" class="active">Phone</label>
-            </div>
-            <div class="input-field">
-              <textarea class="materialize-textarea" placeholder="Enter Message" id="message"></textarea>
-              <label for="message" class="active">Message</label>
-            </div>
-            <input type="submit" value="Submit" class="btn">
           </div>
+          
         </div>
       </div>
     </div>
   </section>
 
+  <!-- Modal Trigger -->
+
+<!-- Modal Structure -->
+<div id="modal1" class="modal">
+  <div class="modal-content">
+    <h4>Book for Appointment</h4>
+    <form action="{% url 'booking' %}" method="POST">
+      {% csrf_token %}
+        <div class="input-field">
+          <input id="name" type="text" name="name" value="">
+          <label for="name" class="active">Name</label>
+        </div>
+  
+        <!-- Email  -->
+        <div class="input-field">
+          <input placeholder="Email" name="email" id="email" type="email" value="">
+          <label for="email" class="active" name="email">Email</label>
+        </div>
+      <!-- Name -->
+        <div class="input-field">
+          <input placeholder="Phone" name="phone" id="phone" type="text" value="">
+          <label for="phone" class="active" name="phone">Phone</label>
+        </div>
+
+        <div class="input-field">
+          <select name="location">
+            <option value="" disabled selected>Please Select</option>
+            <option value="Onehunga">Onehunga</option>
+            <option value="Pukekohe">Pukekohe</option>
+          </select>
+          <label>Preferred Location</label>
+        </div> 
+  
+        <!-- TEXTAREA -->
+        <div class="input-field">
+          <textarea placeholder="Description" name="description" id="description" class="materialize-textarea"></textarea>
+          <label for="description" class="active">Description</label>
+        </div>
+  
+ <!-- DATE PICKER -->
+        <div class="input-field">
+          <input type="text" class="datepicker" name="date_chosen">
+          <label for="date">Choose a Date</label>
+        </div>
+
+        <!-- TIME PICKER -->
+        <div class="input-field">
+          <input type="text" class="timepicker" name="time_chosen" >
+          <label for="time">Choose a Time</label>
+        </div>      
+       
+            
+        <div>
+        <input type="submit" value="Submit" class="btn">
+      </div>
+    </form>
+  </div>
+</div>
+
 {% endblock %}
+
