Going to server9

--- a/templates/bookings/index.html
+++ b/templates/bookings/index.html
@@ -56,9 +56,9 @@
                   <label for="email" class="active" name="email">Email</label>
                 </div>
               </div>
-
+              <div class="row">
                <!-- Preferres Stylist -->
-               <div class="input-field">
+               <div class="input-field col m6 s12">
                 <select name="stylist" required>
                   <option value="No preference"  selected>No preference</option>
                   <option value="Arnie">Arnie</option>
@@ -66,6 +66,8 @@
                 </select>
                 <label>Preferred Stylist</label>
               </div> 
+              </div>
+
               
               <h5>Services</h5>    
                  <br>    
