Going to server10

--- a/templates/services/services.html
+++ b/templates/services/services.html
@@ -34,7 +34,7 @@
               <div class="col s12 m4">
               <div class="card">
                 <div class="card-image medium">
-                  <img src="{{ service.photo.url }}" height="350px" alt="">
+                  <img src="{{ service.photo.url }}" alt="">
                 </div>
                 <div class="card-content">
                   <!-- <p>From ${{service.price}}</p> -->
