--- a/templates/services/services.html
+++ b/templates/services/services.html
@@ -36,7 +36,7 @@
       <br>
       <!-- Row 1 -->
       <div class="row">
-        <div class="col s12 m3">
+        <div class="col s12 m3 l4">
           <h4>
             Starting Price
           </h4>
@@ -63,7 +63,7 @@
           </p>
             
         </div>
-        <div class="col s12 m3">
+        <div class="col s12 m3 l4">
           <h4>
              Colour Services
           </h4>
@@ -78,7 +78,7 @@
           </p>
         </div>
 
-        <div class="col s12 m3">
+        <div class="col s12 m3 l4">
           <h4>
              Lightening Services
           </h4>
@@ -108,7 +108,7 @@
           </p>
         </div>
 
-        <div class="col s12 m3">
+        <div class="col s12 m3 l4">
           <h4>
             Treatment
           </h4>
@@ -126,7 +126,7 @@
 
       <!-- Row2 -->
       <div class="row">
-        <div class="col s12 m3">
+        <div class="col s12 m3 l4">
           <h4>
              Styling
           </h4>
