--- a/templates/services/services.html
+++ b/templates/services/services.html
@@ -24,7 +24,7 @@
   <section class="section section-features grey lighten-3">
     <div class="container">
       <h4 class="brown-text text-darken-1 center">Professional &amp; Services</h4>
-      <h6 class="grey-text text-darken-2 center">
+      <h6 class="grey-text text-darken-2" style="text-align: justify;">
         Our commitment to customer satisfaction has helped make 
         Hair Worx a leading Hairdresser in the area. 
         Whatever you’re looking for, we can make it happen. 
@@ -148,7 +148,20 @@
           </p>
         </div>
       </div>
+
   </section>
+
+  <section class="section section-features brown lighten-3">
+    <div class="container">
+      <h6 class="grey-text text-darken-4" style="text-align: justify;">
+        Interested in getting a new hairdo? Contact us today to find out the 
+        many ways in which I can make your hair look great.   
+        <br>
+        Please Note: All prices are from, and a price will be confirmed after a full consultation.
+
+      </h6>
+  </section>
+
   
 
 {% endblock %}
