--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -14,22 +14,23 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="{% static 'img/bg5.jpg' %}" alt="Unsplashed background img 1"></div>
+    <div class="parallax">
+      <img src="{% static 'img/bg5.jpg' %}" alt="Unsplashed background img 1">
+    </div>
   </div>
 
 
   <section id="popular" class="section section-popular scrollspy">
     <div class="container">
-      <div class="row">
         <h4 class="center">
           <span class="brown-text">Products Available for Purchase
           </span> </h4>
           <div class="row">
             {% for product in products %}
               <div class="col s12 m6">
-              <div class="card">
+              <div class="card" style="height: 850px;">
                 <div class="card-image medium">
-                  <img src="{{ product.photo.url }}" height="400px" alt="">
+                  <img src="{{ product.photo.url }}" height="350px" alt="">
                   
                 </div>
                 <div class="card-content">
@@ -41,7 +42,6 @@
             </div>
             {% endfor %}
           </div>
-        
       
     </div>
   </section>
