--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -7,3 +7,7 @@
          Admin Area
     </h1>
 {% endblock %}
+
+{% block extrastyle %}
+    <link rel="stylesheet" href="{% static 'css/admin.css' %}">
+{% endblock %}
