--- a/templates/bookings/index.html
+++ b/templates/bookings/index.html
@@ -173,13 +173,13 @@
               <div class="row">
                       <!-- DATE PICKER -->
                 <div class="input-field col m6 s12">
-                  <input type="date" class="datepicker" name="date_chosen" required>
+                  <input type="date" class="" name="date_chosen" required>
                   <label for="date">Choose a Date</label>
                 </div>
         
                 <!-- TIME PICKER -->
                 <div class="input-field col m6 s12">
-                  <input type="time" class="timepicker" name="time_chosen" required>
+                  <input type="time" class="" name="time_chosen" required>
                   <label for="time">Choose a Time</label>
                 </div>   
               </div>
