--- a/templates/bookings/index.html
+++ b/templates/bookings/index.html
@@ -63,6 +63,12 @@
                   <option value="No Preference"  selected>No preference</option>
                   <option value="Arnie">Arnie</option>
                   <option value="Dana">Dana</option>
+                  <option value="Dana">Purvi</option>
+                  <option value="Dana">Ailyn</option>
+                  <option value="Dana">Mary</option>
+                  <option value="Dana">Alison</option>
+
+
                 </select>
                 <label>Preferred Stylist</label>
               </div> 
