--- a/hairworx/static/css/style.css
+++ b/hairworx/static/css/style.css
@@ -79,6 +79,11 @@ p {
     width: 100%;
   }
 
+
+.input-field > select {
+  display: block;
+}
+
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
