--- a/templates/bookings/index.html
+++ b/templates/bookings/index.html
@@ -52,7 +52,7 @@
               <div class="row">
                 <!-- Phone -->
                 <div class="input-field col m6 s12">
-                  <input placeholder="Phone" name="phone" id="phone" type="text" value="" required>
+                  <input type="number" placeholder="Phone" name="phone" id="phone" type="text" value="" required>
                   <label for="phone" class="active" name="phone">Phone</label>
                 </div>
                           <!-- Email  -->
