--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
   <link href="{% static 'css/lightbox.min.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
   
   <title>Hairworx</title>
+  <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
+
 </head>
 <body>
 <div class="nav-fixed">
